--- a/audio/Makefile
+++ b/audio/Makefile
@@ -13,8 +13,8 @@ objdir := ../$(objdir)
 all	: $(audio_objects)
 
 depend	:
-	$(CC) -MM $(CFLAGS) *.cpp > audio.dep
-	$(CC) -MM $(CFLAGS) hardware/*.cpp >> audio.dep
+	$(CC) -MM $(CFLAGS) *.cpp hardware/*.cpp | sed -e 's/^\([^ ]\)/$$(objdir)\/\1/' > audio.dep
+
 
 # implied rules
 
