Remove old hardware renderer and add part of the new one
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@130 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/video/Makefile
+++ b/video/Makefile
@@ -13,10 +13,7 @@ objdir := ../$(objdir)
 all	: $(video_objects)
 
 depend	:
-	$(CC) -MM $(CFLAGS) *.cpp hardware/*.cpp hardware/r_opengl/*.cpp | sed -e 's/^\([^ ]\)/$$(objdir)\/\1/' > video.dep
-
-r_opengl: $(objdir)/r_opengl.o
-
+	$(CC) -MM $(CFLAGS) *.cpp hardware/*.cpp | sed -e 's/^\([^ ]\)/$$(objdir)\/\1/' > video.dep
 
 
 # implied rules
@@ -25,9 +22,6 @@ $(objdir)/%.o	: %.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
 
 $(objdir)/%.o	: hardware/%.cpp
-	$(CC) -c $(CFLAGS) $< -o $@
-
-$(objdir)/%.o	: hardware/r_opengl/%.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
 
 
