sw renderer fix
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@138 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -13,6 +13,9 @@ all	: ../d2h.exe
 ../d2h.exe: $(objdir)/d2h.o
 	$(LD) $(LDFLAGS) $< -o $@
 
+../wadtool.exe: $(objdir)/wadtool.o
+	$(LD) $(LDFLAGS) $< -o $@
+
 depend	:
 	$(CC) -MM $(CFLAGS) *.cpp | sed -e 's/^\([^ ]\)/$$(objdir)\/\1/' > tools.dep
 
