new tool for easy wad manipulation
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@140 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -11,10 +11,10 @@ all	: ../d2h.exe ../wadtool.exe
 
 
 ../d2h.exe: $(objdir)/d2h.o
-	$(LD) $(LDFLAGS) $< -o $@
+	$(LD) $(LDFLAGS) $^ -o $@
 
-../wadtool.exe: $(objdir)/wadtool.o
-	$(LD) $(LDFLAGS) $< -o $@
+../wadtool.exe: $(objdir)/wadtool.o $(objdir)/md5.o
+	$(LD) $(LDFLAGS) $^ -o $@
 
 
 depend	:
