*** empty log message ***
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@176 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/wad/Makefile
+++ b/wad/Makefile
@@ -11,5 +11,6 @@ all	:
 	./wadtool.exe -x legacy.wad
 	cp ../resources/*.lmp .
 	./d2h.exe ../resources/doom2hexen.txt XDOOM.lmp
-	cp XDOOM.lmp XHERETIC.lmp
+	./d2h.exe ../resources/heretic2hexen.txt XHERETIC.lmp
 	./wadtool.exe -c legacy.wad ../resources/legacy.wad.inventory
+	rm *.lmp
