--- a/wad/Makefile
+++ b/wad/Makefile
@@ -9,8 +9,11 @@
 all	:
 	cp ../legacy.wad .
 	./wadtool.exe -x legacy.wad
+	cp ../resources/*.txt .
+	cp ../resources/*.png .
+	cp ../resources/*.h .
 	cp ../resources/*.lmp .
-	./d2h.exe ../resources/doom2hexen.txt XDOOM.lmp
-	./d2h.exe ../resources/heretic2hexen.txt XHERETIC.lmp
+	./d2h.exe doom2hexen.txt XDOOM.lmp
+	./d2h.exe heretic2hexen.txt XHERETIC.lmp
 	./wadtool.exe -c legacy.wad ../resources/legacy.wad.inventory
-	rm *.lmp
+	rm *.txt *.png *.h *.lmp
