Now works on 64-bit cpus
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@341 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/grammars/Makefile
+++ b/grammars/Makefile
@@ -15,7 +15,7 @@ all	: $(grammar_objects)
 
 ntexture.tab.c	: ntexture.y $(i)/ntexture.h
 	@echo "Need to run Bison!"
-#	bison $<
+	bison $<
 
 ntexture.yy.c	: ntexture.flex $(i)/ntexture.h ntexture.tab.h
 	flex $<
