new Actor flags
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@390 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/grammars/Makefile
+++ b/grammars/Makefile
@@ -1,5 +1,5 @@
 # Auxiliary Makefile for Doom Legacy grammars
-# Ville Bergholm 2005
+# Ville Bergholm 2005-2006
 
 i = ../include
 
@@ -13,15 +13,20 @@ objdir := ../$(objdir)
 all	: $(grammar_objects)
 
 
+
+ntexture.tab.h	: ntexture.y $(i)/ntexture.h
+	bison -d $<
+
 ntexture.tab.c	: ntexture.y $(i)/ntexture.h
-	@echo "Need to run Bison!"
-	bison $<
+	bison -d $<
 
 ntexture.yy.c	: ntexture.flex $(i)/ntexture.h ntexture.tab.h
 	flex $<
+
+$(objdir)/ntexture.o: ntexture.cpp $(i)/ntexture.h $(i)/w_wad.h ntexture.tab.h
+	$(CC) -c $(CFLAGS) $< -o $@
 
 # implied rules
 
 $(objdir)/%.o	: %.c
 	$(CC) -c $(CFLAGS) $< -o $@
-
