svn trunk compiles
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@391 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/engine/Makefile
+++ b/engine/Makefile
@@ -14,7 +14,7 @@ all	: $(engine_objects)
 
 
 depend	:
-	$(CC) -MM $(CFLAGS) *.cpp animation/*.cpp automap/*.cpp bots/*.cpp hud/*.cpp menu/*.cpp scripting/*.cpp | sed -e 's/^\([^ ]\)/$$(objdir)\/\1/' > engine.dep
+	$(CC) -MM $(CFLAGS) *.cpp automap/*.cpp bots/*.cpp finale/*.cpp hud/*.cpp menu/*.cpp scripting/*.cpp | sed -e 's/^\([^ ]\)/$$(objdir)\/\1/' > engine.dep
 
 
 # implied rules, one for each subdirectory. sad but true.
@@ -22,13 +22,13 @@ depend	:
 $(objdir)/%.o	: %.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
 
-$(objdir)/%.o	: animation/%.cpp
-	$(CC) -c $(CFLAGS) $< -o $@
-
 $(objdir)/%.o	: automap/%.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
 
 $(objdir)/%.o	: bots/%.cpp
+	$(CC) -c $(CFLAGS) $< -o $@
+
+$(objdir)/%.o	: finale/%.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
 
 $(objdir)/%.o	: hud/%.cpp
