Fixed a compilation error, eliminated some code duplication.
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@443 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -19,7 +19,7 @@ all	: ../wad/d2h.exe ../wad/wadtool.exe ../wad/convert_deh.exe
 ../wad/wadtool.exe: $(objdir)/wadtool.o $(objdir)/md5.o
 	$(LD) $(LDFLAGS) $^ -o $@
 
-../wad/convert_deh.exe: $(objdir)/convert_deh.o
+../wad/convert_deh.exe: $(objdir)/convert_deh.o $(objdir)/mnemonics.o
 	$(LD) $(LDFLAGS) $^ -o $@
 
 
