Old uncommitted Legacy2 edits from way back.
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@1108 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(cuneiform C CXX)
+project(doomlegacy C CXX)
 cmake_minimum_required(VERSION 2.8.0)
 
 set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)
