Makefiles fixed and simplified, compiles and links.
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@1109 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -12,8 +12,14 @@ objdir := ../$(objdir)
 
 all	: $(audio_objects)
 
-depend	:
-	$(CC) -MM $(CFLAGS) *.cpp | sed -e 's/^\([^ ]\)/$$(objdir)\/\1/' > audio.dep
+.PHONY : depend
+
+depend : audio.dep
+
+audio.dep :: *.cpp
+
+%.dep :
+	$(CC) -MM $(CFLAGS) $^ > $(@F)
 
 
 # implied rules
@@ -21,8 +27,5 @@ depend	:
 $(objdir)/%.o	: %.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
 
-$(objdir)/%.o	: hardware/%.cpp
-	$(CC) -c $(CFLAGS) $< -o $@
 
-
-include audio.dep
+-include audio.dep
