--- a/interface/sdl/Makefile
+++ b/interface/sdl/Makefile
@@ -12,9 +12,14 @@ objdir := ../../$(objdir)
 
 all	: $(sdl_objects)
 
+.PHONY : depend
 
-depend	:
-	$(CC) -MM $(CFLAGS) *.cpp | sed -e 's/^\([^ ]\)/$$(objdir)\/\1/' > sdl.dep
+depend : sdl.dep
+
+sdl.dep :: *.cpp
+
+%.dep :
+	$(CC) -MM $(CFLAGS) $^ > $(@F)
 
 
 # implied rules
@@ -23,4 +28,4 @@ $(objdir)/%.o	: %.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
 
 
-include sdl.dep
+-include sdl.dep
